bg update + nav panel better

--- a/index.html
+++ b/index.html
@@ -9,14 +9,20 @@
     <link href="https://fonts.googleapis.com/css2?family=Delius&display=swap" rel="stylesheet">
     <title>Portfolio</title>
 </head>
-<body>
+<body class="home">
     <nav class="navigation-ribbon">
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="about_me.html">About me</a></li>
+            <li><a href="about_me.html">About me</a></li>   
             <li><a href="contact.html">Contact</a></li>
             <li><a href="projects.html">All Projects</a></li>
         </ul>
     </nav>
+    <div class="about-me h">
+        <h1>Dwij Rameshbhai Shah</h1>
+        <h2>AI & Software Developer</h2>
+        <p>Hi, I’m Dwij, a passionate software developer and AI student at Nottingham Trent University. I’m focused on creating impactful, engaging digital experiences, blending my love for coding with a drive to solve complex problems. Whether it’s web development, game design, or exploring AI, I’m always eager to learn and take on new challenges.</p>
+        <p>I’m excited to grow my skills and contribute to meaningful projects that push the boundaries of technology. Thanks for stopping by my portfolio!</p>
+    </div>
 </body>
 </html>
