--- a/index.html
+++ b/index.html
@@ -24,5 +24,12 @@
         <p>Hi, I’m Dwij, a passionate software developer and AI student at Nottingham Trent University. I’m focused on creating impactful, engaging digital experiences, blending my love for coding with a drive to solve complex problems. Whether it’s web development, game design, or exploring AI, I’m always eager to learn and take on new challenges.</p>
         <p>I’m excited to grow my skills and contribute to meaningful projects that push the boundaries of technology. Thanks for stopping by my portfolio!</p>
     </div>
+    
 </body>
+<footer>
+    <ul class="socials">
+       <li><a href="https://www.linkedin.com/in/dwij-shah-325049298/" target="_blank"><image src="assets/images/linkedin.png" class="linkedin"></a></li> 
+       <li><a href="">Email</a></li>
+    </ul>
+</footer>
 </html>
