--- a/projects.html
+++ b/projects.html
@@ -19,4 +19,10 @@
         </ul>
     </nav>
 </body>
+<footer>
+    <ul class="socials">
+       <li><a href="https://www.linkedin.com/in/dwij-shah-325049298/" target="_blank"><image src="assets/images/linkedin.png"></a></li> 
+       <li><a href="">Email</a></li>
+    </ul>
+</footer>
 </html>
