--- a/education.html
+++ b/education.html
@@ -13,16 +13,16 @@
     <nav class="navigation-ribbon">
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="about_me.html">About me</a></li>
-            <li><a href="contact.html">Contact</a></li>
             <li><a href="projects.html">All Projects</a></li>
+            <li><a href="education.html">Education</a></li>
+            <li><a href="skills.html">Skills</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
 </body>
 <footer>
     <ul class="socials">
-       <li><a href="https://www.linkedin.com/in/dwij-shah-325049298/" target="_blank"><image src="assets/images/linkedin.png" class="linkedin"></a></li> 
-       <li><a href="">Email</a></li>
+       
     </ul>
 </footer>
 </html>
