--- a/project.html
+++ b/project.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Delius&display=swap" rel="stylesheet">
-    <title>Portfolio</title>
+    <title id = "project-title"></title>
 </head>
 <body>
     <nav class="navigation-ribbon">
@@ -20,11 +20,17 @@
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
-    <div id="Projects">
-        <h3>Projects</h3>
-        <ul id = "projects-list"></ul>
-        <script src="./js/project_panel.js"></script>
-    </div>
+    <nav id="Panel">
+        <div id="Projects">
+            <h3>Projects</h3>
+            <ul id = "projects-list"></ul>
+            <script src="./js/project_panel.js"></script>
+        </div>
+        <div class="Project">
+            <p id="project-description"></p>
+            <script src="./js/load_project.js"></script>
+        </div>
+    </nav>
 </body>
 <footer>
     <ul class="socials">
