--- a/project.html
+++ b/project.html
@@ -13,11 +13,11 @@
     <nav class="navigation-ribbon">
         <h1>Dwij Shah/Dashboard</h1>
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="projects.html">All Projects</a></li>
-            <li><a href="education.html">Education</a></li>
-            <li><a href="skills.html">Skills</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="index.html"><button>Home</button></a></li>
+            <li><a href="projects.html"><button>All Projects</button></a></li>
+            <li><a href="education.html"><button>Education</button></a></li>
+            <li><a href="skills.html"><button>Skills</button></a></li>
+            <li><a href="contact.html"><button>Contact</button></a></li>
         </ul>
     </nav>
     <nav id="Panel">
