--- a/projects.html
+++ b/projects.html
@@ -11,14 +11,20 @@
 </head>
 <body>
     <nav class="navigation-ribbon">
+        <h1>Dwij Shah/Dashboard</h1>
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="projects.html">All Projects</a></li>
-            <li><a href="education.html">Education</a></li>
-            <li><a href="skills.html">Skills</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="index.html"><button>Home</button></a></li>
+            <li><a href="projects.html"><button>All Projects</button></a></li>
+            <li><a href="education.html"><button>Education</button></a></li>
+            <li><a href="skills.html"><button>Skills</button></a></li>
+            <li><a href="contact.html"><button>Contact</button></a></li>
         </ul>
     </nav>
+    <div id="Projects">
+        <h3>Projects</h3>
+        <ul id = "projects-list"></ul>
+        <script src="./js/project_panel.js"></script>
+    </div>
 </body>
 <footer>
     <ul class="socials">
