--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
             <p>I am a second year Computer Science Artificial Intelligence Honours student at Nottingham Trent University. I like building automated systems and softwares which
                 have practical uses, and I am always eager to learn new technologies and improve my skills.</p>
             <p>Feel free to browse through my projects and learn more about my work and experience.</p>
-            <a href="./assets/documents/Dwij Shah.pdf" target="_blank"><button>Download CV</button></a>
+            <a href="./assets/documents/Dwij Shah.pdf" download target="_blank"><button>Download CV</button></a>
             <h2>Projects</h2>
             <p>Some highlights of my projects</p>
-            <ul class="highlights"></ul>
+            <ul id="highlights"></ul>
         </div>
     </div>
     <script type="module" src="./js/index.js"></script>
