--- a/project.html
+++ b/project.html
@@ -24,13 +24,12 @@
         <div id="Projects">
             <h3>Projects</h3>
             <ul id = "projects-list"></ul>
-            <script src="./js/project_panel.js"></script>
         </div>
         <div class="Project">
             <p id="project-description"></p>
-            <script src="./js/load_project.js"></script>
         </div>
     </nav>
+    <script type="module" src="./js/project.js"></script>
 </body>
 <footer>
     <ul class="socials">
