--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,10 @@
 </head>
 <body>
     <nav class="navigation-ribbon">
-        <h1>Dwij Shah/Dashboard</h1>
+        <div id="first-row">
+            <h1>Dashboard</h1>
+            <button id="toggle-nav">☰</button>
+        </div>
         <ul>
             <li><a href="index.html"><button>Home</button></a></li>
             <li><a href="projects.html"><button>All Projects</button></a></li>
@@ -20,10 +23,24 @@
             <li><a href="contact.html"><button>Contact</button></a></li>
         </ul>
     </nav>
-    <div id="Projects">
-        <h3>Projects</h3>
-        <ul id = "projects-list"></ul>
-        <script src="./js/project_panel.js"></script>
+    <div class="dashboard">
+        <div class="projects">
+            <button id="toggle-projects">☰</button>
+            <div id="Projects">
+                <h3>Projects</h3>
+                <ul id = "projects-list"></ul>
+            </div>
+        </div>
+        <div class="Data">
+            <h2>Hi, I'm Dwij Shah</h2>
+            <p>I am a second year Computer Science Artificial Intelligence Honours student at Nottingham Trent University. I like building automated systems and softwares which
+                have practical uses, and I am always eager to learn new technologies and improve my skills.</p>
+            <p>Feel free to browse through my projects and learn more about my work and experience.</p>
+            <a href="./assets/documents/Dwij Shah.pdf" download target="_blank"><button>Download CV</button></a>
+            <h2>Projects</h2>
+            <p>Some highlights of my projects</p>
+            <ul id="highlights"></ul>
+        </div>
     </div>
 </body>
 <footer>
