Created new theme, mobile view incomplete

--- a/index.html
+++ b/index.html
@@ -3,52 +3,99 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Delius&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/pc.css">
+    <link rel="stylesheet" href="./css/mobile.css">
     <title>Portfolio</title>
 </head>
 <body>
-    <nav class="navigation-ribbon">
+    <!-- Navigation Ribbon -->
+    <nav id="navigation-ribbon">
         <div id="first-row">
-            <h1>Dashboard</h1>
+            <h1>Dwij Shah</h1>
             <button id="toggle-nav">☰</button>
         </div>
-        <ul>
-            <li><a href="index.html"><button>Home</button></a></li>
-            <li><a href="projects.html"><button>All Projects</button></a></li>
-            <li><a href="education.html"><button>Education</button></a></li>
-            <li><a href="skills.html"><button>Skills</button></a></li>
-            <li><a href="contact.html"><button>Contact</button></a></li>
+        <ul id="second-row">
+            <li><a href="#About">Home</a></li>
+            <li><a href="#Education">Education</a></li>
+            <li><a href="#Projects">Projects</a></li>
+            <li><a href="#Skills">Skills</a></li>
+            <li><a href="#Contact">Contact</a></li>
         </ul>
     </nav>
     <div class="dashboard">
-        <div class="projects">
-            <button id="toggle-projects">☰</button>
-            <div id="Projects">
-                <h3>Projects</h3>
-                <ul id = "projects-list"></ul>
+        <section id="About">
+            <div id="about-content">
+                <div id="dashboard-text">
+                    <h2>Hi, I'm Dwij Shah</h2>
+                    <p>I'm Dwij Shah, a second-year Artificial Intelligence student at Nottingham Trent 
+                        University with a strong interest in building software systems that automate real-world tasks. 
+                        I enjoy working on practical, efficient solutions—whether it's simulating CPUs, managing data 
+                        flow across servers, or building full-stack applications.</p>
+                    <p>I'm always exploring new technologies and sharpening my skills across areas like data visualization, 
+                        cybersecurity, and quantum computing. I thrive on learning, experimenting, and turning complex ideas into clean, functional code.</p>
+                    <a href="./assets/documents/Dwij Shah.pdf" download target="_blank"><button class="button-1">Download CV</button></a>
+                <a href="https://github.com/reversetoshi" target="_blank"><button class="button-2">Github <img src="/assets/images/github-mark-white.png" alt="Github"></button></a>
+                </div>
+                <img src="./assets/images/pfp.jpg" id="pfp">
             </div>
-        </div>
-        <div class="Data">
-            <h2>Hi, I'm Dwij Shah</h2>
-            <p>I am a second year Computer Science Artificial Intelligence Honours student at Nottingham Trent University. I like building automated systems and softwares which
-                have practical uses, and I am always eager to learn new technologies and improve my skills.</p>
-            <p>Feel free to browse through my projects and learn more about my work and experience.</p>
-            <a href="./assets/documents/Dwij Shah.pdf" download target="_blank"><button>Download CV</button></a>
-            <h2>Projects</h2>
-            <p>Some highlights of my projects</p>
-            <ul id="highlights"></ul>
-        </div>
+            
+        </section>
+
+        <section id="Education">
+            <div class="content">
+                <div class="header">
+                    <h2>Education</h2>
+                    <h3>My academic background and qualifications</h3>
+                </div>
+                <ul>
+                    <li>
+                        <h1>Nottingham Trent University</h1>
+                        <h3>Degree: BSc (Hons) Computer Science Artificial Intelligence</h3>
+                        <h3>Grade: 2:1 (Second year)</h3>
+                        <h3>Period: 2023 - Present</h3>
+                    </li>
+                    <li>
+                        <h1>CBSE HSC (A-Levels Equivalent)</h1>
+                        <h3>School: Kendriya Vidyalaya</h3>
+                        <h3>Subjects: Physics, Mathematics, Computer Science, Chemistry, English</h3>
+                        <h3>Grade: 92.86%</h3>
+                        <h3>Period: 2019-2021</h3>
+                    </li>
+                </ul>
+            </div>
+        </section>
+
+        <section id="Projects">
+            <div class="content">
+                <div class="header">
+                    <h2>Projects</h2>
+                    <h3>Some highlights of my projects</h3>
+                </div>
+                <ul id="highlights"></ul>
+                <a href="projects.html"><h1>View all</h1></a>
+            </div>
+        </section>
+
+        <section id="Skills">
+            <div class="content">
+                <div class="header">
+                    <h2>Skills</h2>
+                </div>
+            </div>
+            <ul>
+                <li class="skill">
+
+                </li>
+            </ul>
+        </section>
     </div>
     <script type="module" src="./js/index.js"></script>
+    <footer>
+        <ul id="Contact" class="socials">
+        <li><a href="https://linkedin.com/in/dwij-shah-325049298/"><img id="linkedin" src="./assets/images/linkedin.png" alt="Linkedin Profile"></a></li>
+        <li><a href="mailto:dwijshah2257@outlook.com"><img id="email" src="./assets/images/email.png" alt="Email"></img></a></li>
+        <li><a href="https://github.com/reversetoshi/"><img id="github" src="/assets/images/github-mark-white.png" alt="Github"></a></li>
+        </ul>
+    </footer>
 </body>
-<footer>
-    <ul class="socials">
-       <li><a href="https://linkedin.com/in/dwij-shah-325049298/"><img id="linkedin" src="./assets/images/linkedin.png" alt="Linkedin Profile"></a></li>
-       <li><a href="mailto:dwijshah2257@outlook.com"><img id="email" src="./assets/images/email.png" alt="Email"></img></a></li>
-       <li><a href="https://github.com/reversetoshi/"><img id="github" src="/assets/images/github-mark-white.png" alt="Github"></a></li>
-    </ul>
-</footer>
 </html>
