--- a/index.html
+++ b/index.html
@@ -81,12 +81,36 @@
                 <div class="header">
                     <h2>Skills</h2>
                 </div>
+                <ul>
+                    <li class="skill">
+                        <h3>C++</h3>
+                    </li>
+                    <li class="skill">
+                        <h3>Python</h3>
+                    </li>
+                    <li class="skill">
+                        <h3>HTML</h3>
+                    </li>
+                    <li class="skill">
+                        <h3>Java</h3>
+                    </li>
+                    <li class="skill">
+                        <h3>CSS</h3>
+                    </li>
+                    <li class="skill">
+                        <h3>Javascript</h3>
+                    </li>
+                    <li class="skill">
+                        <h3>Docker</h3>
+                    </li>
+                    <li class="skill">
+                        <h3>MySQL</h3>
+                    </li>
+                    <li class="skill">
+                        <h3>Data Analysis</h3>
+                    </li>
+                </ul>
             </div>
-            <ul>
-                <li class="skill">
-
-                </li>
-            </ul>
         </section>
     </div>
     <script type="module" src="./js/index.js"></script>
