--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
                     <p>I'm always exploring new technologies and sharpening my skills across areas like data visualization, 
                         cybersecurity, and quantum computing. I thrive on learning, experimenting, and turning complex ideas into clean, functional code.</p>
                     <a href="./assets/documents/Dwij Shah.pdf" download target="_blank"><button class="button-1">Download CV</button></a>
-                <a href="https://github.com/reversetoshi" target="_blank"><button class="button-2">Github <img src="/assets/images/github-mark-white.png" alt="Github"></button></a>
+                    <a href="https://github.com/reversetoshi" target="_blank"><button class="button-2">Github <img src="/assets/images/github-mark-white.png" alt="Github"></button></a>
+                    <a href="https://dockerhub.com/reversetoshi" target="_blank"><button class="button-1">Dockerhub <img src="/assets/images/docker.png"></button></a>
                 </div>
                 <img src="./assets/images/pfp.jpg" id="pfp">
             </div>
@@ -116,9 +117,9 @@
     <script type="module" src="./js/index.js"></script>
     <footer>
         <ul id="Contact" class="socials">
-        <li><a href="https://linkedin.com/in/dwij-shah-325049298/"><img id="linkedin" src="./assets/images/linkedin.png" alt="Linkedin Profile"></a></li>
+        <li><a href="https://linkedin.com/in/dwij-shah-325049298/" target="_blank"><img id="linkedin" src="./assets/images/linkedin.png" alt="Linkedin Profile"></a></li>
         <li><a href="mailto:dwijshah2257@outlook.com"><img id="email" src="./assets/images/email.png" alt="Email"></img></a></li>
-        <li><a href="https://github.com/reversetoshi/"><img id="github" src="/assets/images/github-mark-white.png" alt="Github"></a></li>
+        <li><a href="https://github.com/reversetoshi/" target="_blank"><img id="github" src="/assets/images/github-mark-white.png" alt="Github"></a></li>
         </ul>
     </footer>
 </body>
